[package]
name = "pwin"
version = "0.1.1"
edition = "2021"
description = "Simple Password Prompt"
readme = "README.md"
license = "MIT"
homepage = "https://www.github.com/rexsum420/pwin"
documentation = "https://www.github.com/rexsum420/pwin/README.md"
repository = "https://www.github.com/rexsum420/pwin"
keywords = ["password", "prompt", "input", "passwd", "terminal"]
authors = ["Rex Sum - rexsum420@gmail.com",]

[dependencies]
termion = "3.0.0"

[badges]
maintenance = { status = "as-is"}